--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
+    "@mobx-devtools/tools": "^0.0.4",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.15.2",
     "mobx": "^6.12.0",
