--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server -w server/db.json -p 3001",
+    "start": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
     "@mobx-devtools/tools": "^0.0.4",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.15.2",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
     "react": "^18.2.0",
@@ -26,9 +30,11 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "json-server": "^1.0.0-alpha.23",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
